# my_acp_project

./: README.md  crew_agent_server.py  doctor.py  hospital.py  main.py  pyproject.toml  teste.py
Executions_logs/: policy_agent.txt
Postman_curls/: policy_agent-to-crew_agent_server.curl
db/: chroma.sqlite3
